# roblib-rs

./: .travis.yml  Cargo.toml  Cross.toml  Dockerfile  README.md  build.sh  check_all.py  features.py  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  node.yml  test.yml
client/: Cargo.toml
client/examples/: async.rs  blink.rs  camloc_java_display.rs  circle.rs  controller.rs  gpio_in.rs  gpio_in_async.rs  http_latency.rs  latency.rs  sensor.rs  servo.rs  simple.rs  tcp.rs  ultra_multi.rs  with_http.rs  with_log.rs  with_ws.rs
client/src/: async_robot.rs  camloc.rs  gpio.rs  http.rs  lib.rs  logger.rs  roland.rs  tcp.rs  udp.rs  ws.rs
client/src/transports/: http.rs  mod.rs  tcp.rs  udp.rs  ws.rs
encoder-wasm/: Cargo.toml  Dockerfile  build.sh
encoder-wasm/examples/: bench.rs
encoder-wasm/src/: lib.rs
lib/: Cargo.toml
lib/src/: cmd.rs  logger.rs
node-ffi/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.mjs
node-ffi/npm/darwin-x64/: README.md  package.json
node-ffi/npm/linux-arm-gnueabihf/: README.md  package.json
node-ffi/npm/linux-arm64-gnu/: README.md  package.json
node-ffi/npm/linux-x64-gnu/: README.md  package.json
node-ffi/npm/linux-x64-musl/: README.md  package.json
node-ffi/npm/win32-x64-msvc/: README.md  package.json
node-ffi/src/: lib.rs
roblib/: Cargo.toml
roblib-macro/: Cargo.toml
roblib-macro/src/: lib.rs  parsers.rs
roblib-parsing/: Cargo.toml
roblib-parsing/src/: lib.rs
roblib/examples/: pservo.rs  test.rs
roblib/src/: cmd.rs  event.rs  gpio.rs  lib.rs  roland.rs
roblib/src/camloc/: cmd.rs  event.rs  mod.rs
roblib/src/cmd/: concrete.rs  mod.rs  parsing.rs
roblib/src/event/: concrete.rs  mod.rs
roblib/src/gpio/: backend.rs  cmd.rs  event.rs  mod.rs  roland.rs
roblib/src/gpio/backend/: mod.rs  simple.rs  typed.rs
roblib/src/roland/: backend.rs  cmd.rs  event.rs  mod.rs
roblib/src/text_format/: de.rs  error.rs  mod.rs  ser.rs
roland/: Cargo.toml
roland/examples/: button.rs  reset.rs  test.rs
roland/src/: constants.rs  gpio.rs  lib.rs  util.rs
server/: Cargo.toml
server/src/: camloc.rs  cmd.rs  event_bus.rs  logger.rs  main.rs  robot.rs  tcp.rs  udp.rs  utils.rs  ws.rs
server/src/cmd/: camloc.rs  gpio.rs  mod.rs  roland.rs
server/src/transports/: http.rs  mod.rs  tcp.rs  udp.rs  ws.rs
src/: cmd.rs  logger.rs  main.rs  robot.rs  ws.rs
