[package]
name = "roblib-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.29", features = ["net"] }
roblib = { path = "../roblib" }
futures-util = "0.3"
env_logger = "0.10"
actix-http = "3.3"
actix-web = "4.3"
bincode = "1.3.3"
actix-rt = "2.8"
futures = "0.3"
anyhow = "1"
serde = "1"
awc = "3.1"
log = "0.4"

[features]
default = []

all = ["roland", "gpio", "camloc", "async"]

async = ["roblib/async", "dep:async-trait"]

roland = ["roblib/roland"]
gpio = ["roblib/gpio"]
camloc = ["roblib/camloc"]

[[example]]
name = "simple"
required-features = ["roland"]

[[example]]
name = "blink"
required-features = ["gpio"]

[[example]]
name = "gpio_in"
required-features = ["gpio"]

[[example]]
name = "controller"
required-features = ["roland", "gpio", "camloc"]
