[package]
name = "roblib-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
async-trait = { version = "0.1", optional = true }
bincode = "1.3"
env_logger = "0.10"
futures = { version = "0.3", optional = true }
log = "0.4"
reqwest = { version = "0.11", default_features = false, features = [], optional = true }
roblib = { path = "../roblib" }
serde = "1"
tokio = { version = "1.29", optional = true, default_features = false, features = ["net", "rt", "macros", "sync", "time", "io-util"] }
tokio-tungstenite = { version = "0.20", optional = true }

[features]
default = ["tcp"]

all = ["roland", "gpio", "camloc", "async", "tcp", "udp", "http", "ws"]

async = ["roblib/async", "dep:async-trait", "dep:tokio"]

roland = ["roblib/roland"]
gpio = ["roblib/gpio"]
camloc = ["roblib/camloc"]

tcp = []
udp = []
http = ["async", "dep:reqwest"]
ws = ["async", "dep:tokio-tungstenite", "dep:futures"]

[[example]]
name = "latency"
required-features = ["default"]

[[example]]
name = "simple"
required-features = ["default", "roland"]

[[example]]
name = "blink"
required-features = ["default", "gpio"]

[[example]]
name = "gpio_in"
required-features = ["default", "gpio"]

[[example]]
name = "controller"
required-features = ["default", "roland", "gpio", "camloc"]

[[example]]
name = "sensor"
required-features = ["default", "roland"]

[[example]]
name = "circle"
required-features = ["default", "roland"]

[[example]]
name = "tcp"
required-features = ["tcp", "roland"]

[[example]]
name = "async"
required-features = ["roland", "async", "tcp", "http", "ws"]
