[package]
name = "roblib-encoder-wasm"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roblib = { path = "../roblib", features = ["gpio", "roland"] }
wasm-bindgen = "0.2.87"
bincode = "1.3.3"
