[package]
edition = "2021"
name = "kareszklub_roblib-client-node"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.72"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "anyhow"] }
napi-derive = "2.12.2"
roblib-client = { path = "../client", features=["async", "roland", "gpio", "camloc"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
