[package]
name = "roblib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
camloc-server = { git = "https://github.com/Kris030/camloc", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"] }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
rppal = { version = "0.14", optional = true }
roblib-macro = { path = "../roblib-macro" }
anyhow = "1"
log = "0.4"

[features]
default = []

all = ["gpio", "roland", "camloc", "async"]

async = ["dep:async-trait", "dep:futures"]

gpio = []
roland = []
camloc = ["dep:camloc-server"]

gpio-backend = ["dep:rppal"]
