[package]
name = "roblib-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-util = { version = "0.7", features = ["compat"] }
roblib = { path = "../roblib", features = ["async"] }
roblib-parsing = { path = "../roblib-parsing" }
actix-web-actors = "4.2"
env_logger = "0.10.0"
futures-util = "0.3"
async-trait = "0.1"
actix-web = "4.3"
actix = "0.13"
anyhow = "1"
log = "0.4"

[features]
default = []

all = ["roland", "gpio", "camloc", "backend"]

backend = ["roblib/gpio-backend"]

roland = ["roblib/roland"]
gpio = ["roblib/gpio"]
camloc = ["roblib/camloc"]
