[package]
name = "roblib-server"
version = "0.1.0"
edition = "2021"

[dependencies]
roblib = { path = "../roblib", features = ["async"] }
actix-web-actors = "4.2"
env_logger = "0.10.0"
futures-util = "0.3"
async-trait = "0.1"
actix-web = "4.3"
bincode = "1.3.3"
tokio = "1.29"
actix = "0.13"
anyhow = "1"
serde = "1"
log = "0.4"
envy = "0.4.2"

[features]
default = []

all = ["roland", "gpio", "camloc", "backend"]

backend = ["roblib/gpio-backend"]

roland = ["roblib/roland"]
gpio = ["roblib/gpio"]
camloc = ["roblib/camloc"]
